// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Restaurants View should render with loading cards 1`] = `
<Fragment>
  <GridWrapper>
    <H1>
      Restaurants
    </H1>
    <Paragraph
      bottomSpaced={true}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </Paragraph>
  </GridWrapper>
  <div>
    <FiltersBar />
    <GridWrapper>
      <H2>
        All Restaurants
      </H2>
      <Restaurants>
        <RestaurantCardLoader />
        <RestaurantCardLoader />
        <RestaurantCardLoader />
        <RestaurantCardLoader />
      </Restaurants>
    </GridWrapper>
  </div>
</Fragment>
`;

exports[`Restaurants View should render without failing 1`] = `
<Fragment>
  <GridWrapper>
    <H1>
      Restaurants
    </H1>
    <Paragraph
      bottomSpaced={true}
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </Paragraph>
  </GridWrapper>
  <div>
    <FiltersBar />
    <GridWrapper>
      <H2>
        All Restaurants
      </H2>
      <Paragraph
        bottomSpaced={true}
      >
        Sorry, we didn't find any results for your search.
      </Paragraph>
    </GridWrapper>
  </div>
</Fragment>
`;
